# engineeringhub_controlinterface

./: .dockerignore  .gitignore  AGENTS.md  CLAUDE.md  CONSULTINGMANAGER_API.md  Dockerfile  Dockerfile.task-runner  README.md  docker-compose.yml  init.sh  prd.md  pyproject.toml
capture_templates/: contracting-hours.yaml
config/: config.example.yaml  engineering-hub-capture.el  journal-seed.md
diagnostics/: RUNBOOK.md  context_pipeline_tasks.yaml
docs/: # Journaler — Context Management Strateg.ini  workflow.md
latex-styles/: consulting-report.yaml  executive-summary.yaml  technical-spec.yaml
latex-templates/: preamble-consulting.tex  preamble-minimal.tex
mock_server/: __init__.py  data.py  main.py
personas/: acoustic-engineer.yaml  acoustic-sim-expert.yaml  client-liaison.yaml  coordination-liaison.yaml  project-manager.yaml  standards-reviewer.yaml
prompts/: acoustic-sim-expert.txt  coordination-analyst.txt  latex-writer.txt  lvt-task-extractor.txt  panning-for-gold.txt  research-agent.txt  standards-checker.txt  technical-reviewer.txt  technical-writer.txt  weekly-reviewer.txt  zettelkasten-curator.txt
skills/: acoustic-sim-expert.yaml  coordination-analyst.yaml  latex-writer.yaml  lvt-task-extractor.yaml  panning-for-gold.yaml  research.yaml  standards-checker.yaml  technical-reviewer.yaml  technical-writer.yaml  weekly-reviewer.yaml  zettelkasten-curator.yaml
src/engineering_hub/: __init__.py  __main__.py  cli.py  corpus_service_factory.py
tests/: __init__.py  conftest.py
tests/unit/: __init__.py  test_agent_web_search.py  test_briefing_format.py  (+20 more)
(+108 files in other folders)
